--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -28,4 +28,4 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: artifact
-        path: bin/Release/OCB/netcoreapp3.0/
+        path: bin/Release/netcoreapp3.0/
