--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Core5"]
 	path = Core5
 	url = https://github.com/zontreck/BotCore5
+[submodule "libremetaverse"]
+	path = libremetaverse
+	url = https://github.com/cinderblocks/libremetaverse
