--- a/BlankBot.csproj
+++ b/BlankBot.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <Version>1.0.1</Version>
     <SignAssembly>false</SignAssembly>
+    <Configurations>Debug;Release;DebPub</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -14,6 +15,11 @@
     <OutputPath>bin\Release</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebPub|AnyCPU'">
+    <OutputPath>..\Bot\bin\debpub</OutputPath>
+  </PropertyGroup>
+  
+  
   <ItemGroup>
     <Compile Remove="libremetaverse\**" />
     <EmbeddedResource Remove="libremetaverse\**" />
